<?xml version="1.0"?>
<package>
  <name>rail_action_queue_msgs</name>
  <version>0.0.0</version>
  <description>Messages for executing a queue of general robot actions.</description>

  <maintainer email="dekent@gatech.edu">David Kent</maintainer>
  <author email="dekent@gatech.edu">David Kent</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rail_action_queue_msgs</url>
  <url type="bugtracker">https://github.com/GT-RAIL/rail_action_queue_msgs/issues</url>
  <url type="repository">https://github.com/GT-RAIL/rail_action_queue_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
